--- a/digitalocean.html
+++ b/digitalocean.html
@@ -9,7 +9,7 @@
     <title>DigitalOcean</title>
   </head>
   <body>
-    <div class="section-one">
+    <div class="top-section">
       <div class="container">
         <!-- Creazione della nav -->
         <nav>
@@ -37,7 +37,7 @@
         </nav>
       </div>
       <!-- Creazione blue-container -->
-        <header>
+      <header>
           <div class="blue d-flex justify-content-between container">
           <div class="header-left">
             <h1>The simplest cloud platform for developers & teams</h1>
@@ -72,5 +72,50 @@
         </div>
       </header>
     </div>
+      <!-- Creazione del main con le varie sezioni -->
+      <main>
+      <!-- Sezione loghi -->
+      <section class="logo-section">
+        <div class="container">
+          <div class="title text-uppercase">
+            <h2>Innovative businesses trust digitalocean</h2>
+          </div>
+          <div class="logolist">
+            <ul>
+              <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt=""></li>
+              <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/gitlab-166e2067.png" alt=""></li>
+              <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+              <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/hashicorp-4431df79.png" alt=""></li>
+              <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/wework-be6eab32.png" alt=""></li>
+              <li><img id="splunk" src="https://www.digitalocean.com/assets/media/homepage/logos/splunk-06b17d75.png" alt=""></li>
+            </ul>
+          </div>
+          <a href="#">View customer stories <i class="fas fa-angle-right"></i></a>
+        </div>
+      </section>
+      <!-- Creazione sezione deploy -->
+      <section class="deploy">
+        <div class="container">
+          <div class="deploy-header">
+            <h2>Deploy and scale seamlessly</h2>
+            <p>Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+          </div>
+          <div class="center-container">
+            <div class="col-4">
+              <ul class="deploy-nav">
+                <li id="active-brd"><a id="active-txt" href="">Deploy</a></li>
+                <li><a href="">Manage</a></li>
+                <li><a href="">Secure</a></li>
+                <li><a href="">Scale</a></li>
+                <li><a href="">Monitor</a></li>
+              </ul>
+            </div>
+            <div class="col-8">
+
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
