--- a/digitalocean.html
+++ b/digitalocean.html
@@ -100,7 +100,7 @@
             <h2>Deploy and scale seamlessly</h2>
             <p>Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
           </div>
-          <div class="center-container">
+          <div class="center-container d-flex">
             <div class="col-4">
               <ul class="deploy-nav">
                 <li id="active-brd"><a id="active-txt" href="">Deploy</a></li>
@@ -110,8 +110,29 @@
                 <li><a href="">Monitor</a></li>
               </ul>
             </div>
-            <div class="col-8">
-
+            <div class="col-8 deploy-main">
+              <div class="row">
+                <div class="col-6">
+                  <img src="img/icon-one.png" alt="">
+                  <h3>Cluster deployments</h3>
+                  <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+                </div>
+                <div class="col-6">
+                  <img src="img/icon-two.png" alt="">
+                  <h3>Optimized compute types</h3>
+                  <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
+                </div>
+                <div class="col-6">
+                  <img src="img/icon-three.png" alt="">
+                  <h3>One-click apps</h3>
+                  <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
+                </div>
+                <div class="col-6">
+                  <img src="img/icon-four.png" alt="">
+                  <h3>Global availability</h3>
+                  <p>Deploy to any of our data center regions around the world.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
