End of designed section

--- a/digitalocean.html
+++ b/digitalocean.html
@@ -137,6 +137,38 @@
           </div>
         </div>
       </section>
+      <!-- Creazione sezione designed -->
+      <section class="designed">
+        <div class="container">
+          <div class="center-container">
+            <div class="designed-header text-center">
+            <h2>Designed for developers</h2>
+            <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+          </div>
+          <div class="designed-main d-flex">
+            <div class="angle d-flex align-items-center">
+              <i class="fas fa-angle-left"></i>
+            </div>
+            <div class="picture">
+              <img src="https://www.digitalocean.com/assets/media/homepage/screenshot-create-droplet-12336b41.jpg" alt="">
+              <p class="text-center">Create compute servers in 5 seconds or less.</p>
+              <div class="dots text-center">
+                <i class="fas fa-circle"></i>
+                <i class="far fa-circle"></i>
+                <i class="far fa-circle"></i>
+                <i class="far fa-circle"></i>
+              </div>
+            </div>
+            <div class="angle angle d-flex align-items-center">
+              <i class="fas fa-angle-right"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Creazione sezione features -->
+      <section class="features">
+
+      </section>
     </main>
   </body>
 </html>
