End of features section

--- a/digitalocean.html
+++ b/digitalocean.html
@@ -167,7 +167,39 @@
       </section>
       <!-- Creazione sezione features -->
       <section class="features">
-
+        <div class="container">
+          <div class="features-header text-center">
+            <h2>The features your business needs</h2>
+          </div>
+          <div class="features-main row">
+            <div class="col-4">
+              <img src="img/icon-five.png" alt="">
+              <h4>Predictable pricing</h4>
+              <p>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+            </div>
+            <div class="col-4">
+              <img src="img/icon-six.png" alt="">
+              <h4>World-class service</h4>
+              <p>Free round-the-clock technical support for all customers. You’ll feel the love.</p>
+            </div>
+            <div class="col-4">
+              <img src="img/icon-seven.png" alt="">
+              <h4>Reliable platform</h4>
+              <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+            </div>
+          </div>
+          <div class="features-footer row">
+            <div class="col-4">
+              <a href="">Pricing <i class="fas fa-angle-right"></i></a href="">
+            </div>
+            <div class="col-4">
+              <a href="">Support <i class="fas fa-angle-right"></i></a href="">
+            </div>
+            <div class="col-4">
+              <a href="">Security <i class="fas fa-angle-right"></i></a href="">
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
